até a parte 4 do video

--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
 
-body{
+body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
-    font-family: "Chakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
 }
 
-.conteudo-principal{
+
+.conteudo-principal {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,18 +25,20 @@ body{
     width: 100%;
     margin: 0 auto;
 }
-.titulo-principal{
+
+.titulo-principal {
     text-align: left;
     width: 100%;
     font-size: 32px;
 }
 
-.titulo-principal span{
+.titulo-principal span {
     color: var(--verde);
 }
 
-.botao{
-    font-family: "Crakra Petch", sans-serif;
+
+.botao {
+    font-family: 'Crakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -50,28 +53,54 @@ body{
     border-top: none;
 }
 
-.botao:first-child{
+.botao:first-child {
     border-radius: 40px 40px 0 0;
 }
 
-.botoes{
+.botoes {
     display: block;
 }
 
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+.aba-conteudo.ativo{
+    display:block;
+}
+
+.aba-conteudo{
+    display: none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
+
 @media screen and (min-width: 768px) {
-    .botoes{
+    .botoes {
         display: flex;
     }
-    .botao:first-child{ 
+
+    .botao:first-child { 
         border-radius: 40px 0 0 0;
     }
 
-    .botao:last-child{
+    .botao:last-child {
         border-radius: 0 40px 0 0;
-    }
-    
-    .botao:last-child{
-        border-radius: 0 40px 0 0;
-    }
+    }    
 }
+
     
