--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
-:root{
+:root {
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
     --branco: #FFFFFF;
@@ -38,7 +38,7 @@ body {
 
 
 .botao {
-    font-family: 'Crakra Petch', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -47,9 +47,9 @@ body {
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid var(--botao-ativo); 
-    border-left: 2px solid var(--botao-ativo); 
-    border-right: 2px solid var(--botao-ativo); 
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
 
@@ -97,7 +97,7 @@ body {
 .contador-digito{
     padding: 0 16px;
     text-align: center;
-    min-width: 100px
+    min-width: 100px;
 }
 
 .contador-digito-numero{
@@ -110,21 +110,19 @@ body {
     color: var(--verde);
     font-size: 20px;
     margin: 0;
-}
 
+}
 
 @media screen and (min-width: 768px) {
     .botoes {
         display: flex;
     }
 
-    .botao:first-child { 
+    .botao:first-child {
         border-radius: 40px 0 0 0;
     }
 
     .botao:last-child {
         border-radius: 0 40px 0 0;
-    }    
+    }
 }
-
-    
